# homework

./: CMakeLists.txt  build.bat  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
171024_cpp_compilation/: CMakeLists.txt  main.cpp
181024_refactoring/: CMakeLists.txt  after_refactoring_nbalabanova.cpp  build_run.bat  refactfoex.cpp
241203_refactoring/: CMakeLists.txt  build_run.bat  io.cpp  io.hpp  main.cpp  sliyanie2.cpp  sliyanie2.hpp
250315_long_number_task/: CMakeLists.txt  long_number.cpp  long_number.hpp
250510_obuchaika/: CMakeLists.txt  build_run.bat  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
unit_test/: CMakeLists.txt
unit_test/src/: CMakeLists.txt  bubble_sort.cpp  bubble_sort.hpp  long_number.cpp  long_number.hpp
unit_test/test/: CMakeLists.txt  test_bubble.cpp  test_long_number.cpp
